syntax = "proto3";

package user.request;

option java_multiple_files = true;
option java_package = "com.sanglt.user.requests";

import "google/protobuf/timestamp.proto";

message UserInformation {
  int32 user_id = 1;
}

message Message {
  int32 user_id = 1;
  string message = 2;
  google.protobuf.Timestamp time = 3;
}